--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
                 </p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4 mx-auto">
+                <img class="wedding-logo" src="img/wedding-logo.jpg">
+            </div>
+            <div class="col-lg-4 mx-auto">
+
+            </div>
+        </div>
     </div>
 </section>
 
@@ -101,7 +109,7 @@
 <!-- Footer -->
 <footer>
     <div class="container text-center">
-        <p>Copyright &copy; Your Website 2017</p>
+        <p>Simone & Stefania</p>
     </div>
 </footer>
 
@@ -113,7 +121,7 @@
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
 <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&libraries=places&sensor=false"></script>
 
 <!-- Custom scripts for this template -->
 <script src="js/wedding.js"></script>
