--- a/web/_index.html
+++ b/web/_index.html
@@ -34,7 +34,6 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
-            Menu
             <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -42,6 +41,7 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#lista">Lista Nozze</a>
                 </li>
+                <li><i style="font-size:5px; color:red" class="fa fa-circle" aria-hidden="true"></i></li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#location">Location</a>
                 </li>
