--- a/web/_index.html
+++ b/web/_index.html
@@ -41,7 +41,7 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#lista">Lista Nozze</a>
                 </li>
-                <li><i style="font-size:5px; color:red" class="fa fa-circle" aria-hidden="true"></i></li>
+                <!--li><i style="font-size:5px; color:red" class="fa fa-circle" aria-hidden="true"></i></li-->
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#location">Location</a>
                 </li>
