--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,14 +42,12 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-                <a class="navbar-brand" du-smooth-scroll du-scrollspy offset="30" href="#page-top">Simo <span style="color:red">&#x2661;</span>
+            <a class="navbar-brand" du-smooth-scroll du-scrollspy offset="30" href="#page-top">Simo <span style="color:red">&#x2661;</span>
                 Stefi</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" ng-click="Main.toggleMenu()">
                 <i class="fa fa-bars"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="collapse navbar-collapse" id="navbarResponsive" ng-style="{display: Main.menuToggled}">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Lista Nozze</a>
