--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,9 +4,15 @@
 <head>
 
     <meta charset="utf-8">
+
+    <meta property="og:title" content="Simo & Stefi" />
+    <meta property="og:description" content="Vi aspettano per festeggiare il loro Matrimonio!" />
+    <meta property="og:url" content="http://simostefi.it" />
+    <meta property="og:image" content="http://simostefi.it/img/wedding-logo-small.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Vi aspettano per festeggiare il loro Matrimonio!">
+    <meta name="author" content="Simone Tallevi-Diotallevi">
 
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
@@ -20,11 +26,12 @@
     <!-- Custom styles for this template -->
     <link href="css/wedding.css" rel="stylesheet">
 
-    <script src="vendor/angular/angular.js"></script>
+    <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular/angular-animate.min.js"></script>
     <script src="vendor/angular/angular-touch.min.js"></script>
     <script src="vendor/angular/angular-ui-router.min.js"></script>
     <script src="vendor/angular/angular-scroll.min.js"></script>
+    <script src="vendor/hello.all.min.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx73ZkwoWY0Qa7B0DEwRmLho6w3nX1_is&libraries=places&sensor=false"></script>
 
@@ -68,6 +75,8 @@
 
     <!-- Footer -->
     <footer>
+        <!--<button onclick="hello('google').login()">google</button>-->
+
         <div class="container text-center">
             <p>Simone & Stefania</p>
         </div>
