--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,7 +60,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive" ng-style="{display: Main.menuToggled}">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Lista Nozze</a>
+                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Luna di miele</a>
                     </li>
                     <!--li><i style="font-size:5px; color:red" class="fa fa-circle" aria-hidden="true"></i></li-->
                     <li class="nav-item">
