adding social section

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -62,9 +62,11 @@
                     <li class="nav-item">
                         <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Luna di miele</a>
                     </li>
-                    <!--li><i style="font-size:5px; color:red" class="fa fa-circle" aria-hidden="true"></i></li-->
                     <li class="nav-item">
                         <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#location">Location</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#social">Social</a>
                     </li>
                 </ul>
             </div>
