--- a/src/test/resources/email_template/email.html
+++ b/src/test/resources/email_template/email.html
@@ -17,6 +17,7 @@
                 <tbody>
                 <tr>
                     <td style="background-color:rgba(255,255,255,0.5);">
+                        <img width="0px" height="0px" src="http://localhost:8080/view-registration?id=randomid1234">
                         <a href="www.simostefi.it">
                             <img width="100%"
                                  src="https://storage.googleapis.com/wedding-simostefi.appspot.com/invito/simostefi-invito.png">
