--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,13 +60,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive" ng-style="{display: Main.menuToggled}">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Luna di miele</a>
+                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Honeymoon</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#location">Location</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#social">Social</a>
+                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#accommodations">Accommodations</a>
                     </li>
                 </ul>
             </div>
