--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,8 +52,13 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" du-smooth-scroll du-scrollspy offset="30" href="#page-top">Simo <span style="color:red">&#x2661;</span>
-                Stefi</a>
+            <div class="row">
+                <div style="margin-right:20px">
+                    <img height="45px" src="img/wedding-logo-small.png">
+                </div>
+                <a class="navbar-brand" du-smooth-scroll du-scrollspy offset="30" href="#page-top">Simo <span style="color:red">&#x2661;</span>
+                    Stefi</a>
+            </div>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" ng-click="Main.toggleMenu()">
                 <i class="fa fa-bars"></i>
             </button>
