adding sending task for the email

--- a/src/main/resources/email_template/email.html
+++ b/src/main/resources/email_template/email.html
@@ -4,7 +4,7 @@
             <p style="
                 margin: 10px;
                 font-size: 18px;
-                font-family: Verdana, Helvetica;">Cari Enrica e Giancarlo,</p>
+                font-family: Verdana, Helvetica;">{$SALUTATION},</p>
         </td>
     </tr>
     <tr>
