--- a/src/main/resources/email_template/email.html
+++ b/src/main/resources/email_template/email.html
@@ -4,7 +4,7 @@
             <p style="
                 margin: 10px;
                 font-size: 18px;
-                font-family: Verdana, Helvetica;">{$SALUTATION},</p>
+                font-family: Verdana, Helvetica;">${SALUTATION},</p>
         </td>
     </tr>
     <tr>
@@ -17,7 +17,7 @@
                 <tbody>
                 <tr>
                     <td style="background-color:rgba(255,255,255,0.5);">
-                        <img width="0px" height="0px" src="http://localhost:8080/view-registration?id=randomid1234">
+                        <img width="0px" height="0px" src="${BASEURL}/view-registration?id=${ID}">
                         <a href="www.simostefi.it">
                             <img width="100%"
                                  src="https://storage.googleapis.com/wedding-simostefi.appspot.com/invito/simostefi-invito.png">
