--- a/src/main/resources/email_template/email.html
+++ b/src/main/resources/email_template/email.html
@@ -1,31 +1,50 @@
-<table align="center" cellspacing="0" cellpadding="0">
+<table align="center" cellspacing="0" cellpadding="0" width="100%">
+    <tr><td></td></tr>
     <tr>
-        <td>
-            <p style="
-                margin: 10px;
-                font-size: 18px;
-                font-family: Verdana, Helvetica;">${SALUTATION},</p>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <table align="center" cellspacing="0" cellpadding="0"
-                   style="width: 600px;
-                    background-image:url('https://storage.googleapis.com/wedding-simostefi.appspot.com/invito/pattern-background.jpg');
-                    background-repeat: no-repeat;
-                    background-size: cover;" class="main">
+        <td style="vertical-align: top;text-align: center;">
+            <table align="left" width="100%" cellspacing="0" cellpadding="0" class="main"
+                   style="background-color:#009688;margin:auto;color:white">
                 <tbody>
                 <tr>
-                    <td style="background-color:rgba(255,255,255,0.5);">
+                    <td>
+                        <p style="
+                            text-align:left;
+                            margin: 10px;
+                            font-size: 16px;
+                            font-style: italic;">{$SALUTATION},</p>
+                    </td>
+                </tbody>
+            </table>
+            <table width="100%" align="center" cellspacing="0" cellpadding="0" class="main">
+                <tbody>
+                <tr>
+                    <td style="text-align: center; background-image: url(http://www.orfi.pl/papiery/woodstock_betulla.jpg);">
                         <img width="0px" height="0px" src="${BASEURL}/view-registration?id=${ID}">
-                        <a href="www.simostefi.it">
-                            <img width="100%"
+                        <a href="www.simostefi.it/web-registration?id=${ID}">
+                            <img width="100%" style="max-width:550px"
                                  src="https://storage.googleapis.com/wedding-simostefi.appspot.com/invito/simostefi-invito.png">
                         </a>
                     </td>
                 </tbody>
             </table>
+            <table width="100%" cellspacing="0" cellpadding="0" class="main"
+                   style="background-color:#009688;margin:auto;color:white">
+                <tbody>
+                <tr>
+                    <td>
+                        <p style="
+                            margin: 10px;
+                            font-size: 12px;
+                            font-style: italic;">
+                            In allegato alcune proposte di alberghi convenzionati!
+                            Visita il sito per ulteriori informazioni
+                            <a style="color:white" href="www.simostefi.it/web-registration?id=${ID}">www.simostefi.it</a>
+                        </p>
+                    </td>
+                </tbody>
+            </table>
         </td>
     </tr>
+    <tr><td></td></tr>
 </table>
 <br>
