rollback to java 7

--- a/src/main/resources/email_template/email.html
+++ b/src/main/resources/email_template/email.html
@@ -11,7 +11,7 @@
                             text-align:left;
                             margin: 10px;
                             font-size: 16px;
-                            font-style: italic;">{$SALUTATION},</p>
+                            font-style: italic;">${SALUTATION},</p>
                     </td>
                 </tbody>
             </table>
