--- a/src/main/resources/email_template/email.html
+++ b/src/main/resources/email_template/email.html
@@ -37,8 +37,7 @@
                             font-size: 12px;
                             font-style: italic;">
                             In allegato alcune proposte di alberghi convenzionati!
-                            Visita il sito per ulteriori informazioni
-                            <a style="color:white" href="www.simostefi.it/web-registration?id=${ID}">www.simostefi.it</a>
+                            Visita il sito <a style="color:white" href="www.simostefi.it/web-registration?id=${ID}">www.simostefi.it</a> per ulteriori informazioni
                         </p>
                     </td>
                 </tbody>
