adding photo section

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,7 @@
     <script src="vendor/angular/angular-touch.min.js"></script>
     <script src="vendor/angular/angular-ui-router.min.js"></script>
     <script src="vendor/angular/angular-scroll.min.js"></script>
-    <script src="vendor/hello.all.min.js"></script>
+    <script src="vendor/angular/angular-gridify.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx73ZkwoWY0Qa7B0DEwRmLho6w3nX1_is&libraries=places&sensor=false"></script>
 
@@ -44,6 +44,7 @@
 
     <script src="partials/main.js"></script>
     <script src="partials/home/home.js"></script>
+    <script src="partials/photo/photo.js"></script>
 
 </head>
 
