adding photo section

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,6 +74,9 @@
                     <li class="nav-item">
                         <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#accommodations">Accommodations</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" ui-sref="photo">Photos</a>
+                    </li>
                 </ul>
             </div>
         </div>
