--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,17 +5,17 @@
 
     <meta charset="utf-8">
 
-    <meta property="og:title" content="Simo & Stefi" />
-    <meta property="og:description" content="Vi aspettano per festeggiare il loro Matrimonio!" />
-    <meta property="og:url" content="http://simostefi.it" />
-    <meta property="og:image" content="http://simostefi.it/img/wedding-logo-small.png" />
+    <meta property="og:title" content="Simo & Stefi"/>
+    <meta property="og:description" content="Vi aspettano per festeggiare il loro Matrimonio!"/>
+    <meta property="og:url" content="http://simostefi.it"/>
+    <meta property="og:image" content="http://simostefi.it/img/wedding-logo-small.png"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Vi aspettano per festeggiare il loro Matrimonio!">
     <meta name="author" content="Simone Tallevi-Diotallevi">
 
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
 
     <title>Simo & Stefi</title>
 
@@ -25,6 +25,10 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Custom styles for this template -->
     <link href="css/wedding.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+            integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+            crossorigin="anonymous"></script>
 
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular/angular-animate.min.js"></script>
@@ -36,6 +40,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBx73ZkwoWY0Qa7B0DEwRmLho6w3nX1_is&libraries=places&sensor=false"></script>
 
     <script src="vendor/bootstrap-ui/bootstrap-ui-2.5.0.min.js"></script>
+
+    <script src="vendor/ng-infinite-scroll.min.js"></script>
 
     <script src="app.js"></script>
 
@@ -50,48 +56,52 @@
 
 <body id="page-top" ng-controller="MainCtrl as Main" ng-init="Main.init()">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-            <div class="row">
-                <div style="margin-right:20px">
-                    <img height="45px" src="img/wedding-logo-small.png">
-                </div>
-                <a class="navbar-brand" du-smooth-scroll du-scrollspy offset="30" href="#page-top">Simo <span style="color:red">&#x2661;</span>
-                    Stefi</a>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+        <div class="row">
+            <div style="margin-right:20px">
+                <img height="45px" src="img/wedding-logo-small.png">
             </div>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" ng-click="Main.toggleMenu()">
-                <i class="fa fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive" ng-style="{display: Main.menuToggled}">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Honeymoon</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#location">Location</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#accommodations">Accommodations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" ui-sref="photo">Photos</a>
-                    </li>
-                </ul>
-            </div>
+            <a class="navbar-brand" du-smooth-scroll du-scrollspy offset="30" href="#page-top">Simo <span
+                    style="color:red">&#x2661;</span>
+                Stefi</a>
         </div>
-    </nav>
-
-    <div id="main-view" ui-view></div>
-
-    <!-- Footer -->
-    <footer>
-        <!--<button onclick="hello('google').login()">google</button>-->
-
-        <div class="container text-center">
-            <p>Simone & Stefania</p>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation" ng-click="Main.toggleMenu()">
+            <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive" ng-style="{display: Main.menuToggled}">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Honeymoon</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#location">Location</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" du-smooth-scroll du-scrollspy offset="30"
+                       href="#accommodations">Accommodations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" ui-sref="photo">Photos</a>
+                </li>
+            </ul>
         </div>
-    </footer>
+    </div>
+</nav>
+
+<div id="main-view" ui-view></div>
+
+<!-- Footer -->
+<footer>
+    <!--<button onclick="hello('google').login()">google</button>-->
+
+    <div class="container text-center">
+        <p>Simone & Stefania</p>
+    </div>
+</footer>
 
 </body>
 
