--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,7 +61,9 @@
     <div class="container">
         <div class="row">
             <div style="margin-right:20px">
-                <img height="45px" src="img/wedding-logo-small.png">
+                <a du-smooth-scroll du-scrollspy offset="30" href="#page-top">
+                    <img height="45px" src="img/wedding-logo-small.png">
+                </a>
             </div>
             <a class="navbar-brand" du-smooth-scroll du-scrollspy offset="30" href="#page-top">Simo <span
                     style="color:red">&#x2661;</span>
@@ -74,6 +76,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive" ng-style="{display: Main.menuToggled}">
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" ui-sref="home">Home</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" href="#lista">Honeymoon</a>
                 </li>
