--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,7 @@
     <script src="partials/main.js"></script>
     <script src="partials/home/home.js"></script>
     <script src="partials/photo/photo.js"></script>
+    <script src="partials/itinerary/itinerary.js"></script>
 
 </head>
 
@@ -88,6 +89,9 @@
                 <li class="nav-item">
                     <a class="nav-link" du-smooth-scroll du-scrollspy offset="30"
                        href="#accommodations">Accommodations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" ui-sref="itinerary">Itinerary</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" du-smooth-scroll du-scrollspy offset="30" ui-sref="photo">Photos</a>
